Style link list example and setup scrollable search results example

--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -56,13 +56,13 @@
           -->
           <h4 id="grid1_label">Related Documents</h4>
           <div role="grid" aria-labelledby="grid1_label">
-            <div role="row">
-              <span role="gridcell"><a tabindex="-1" href="http://www.w3.org/TR/wai-aria-1.1/">ARIA 1.1 Specification</a></span>
-              <span role="gridcell"><a tabindex="-1" href="https://www.w3.org/TR/core-aam-1.1/">Core Accessibility API Mappings 1.1</a></span>
-              <span role="gridcell"><a tabindex="-1" href="https://www.w3.org/WAI/intro/aria.php">WAI-ARIA Overview</a></span>
-              <span role="gridcell"><a tabindex="-1" href="https://www.w3.org/WAI/intro/wcag">WCAG Overview</a></span>
-              <span role="gridcell"><a tabindex="-1" href="https://www.w3.org/TR/html5/">HTML 5 Specification</a></span>
-              <span role="gridcell"><a tabindex="-1" href="https://www.w3.org/TR/2015/WD-SVG2-20150915/">SVG 2 Specification</a></span>
+            <div role="row" class="list-links">
+              <span role="gridcell" class="list-link"><a tabindex="-1" href="http://www.w3.org/TR/wai-aria-1.1/">ARIA 1.1 Specification</a></span>
+              <span role="gridcell" class="list-link"><a tabindex="-1" href="https://www.w3.org/TR/core-aam-1.1/">Core Accessibility API Mappings 1.1</a></span>
+              <span role="gridcell" class="list-link"><a tabindex="-1" href="https://www.w3.org/WAI/intro/aria.php">WAI-ARIA Overview</a></span>
+              <span role="gridcell" class="list-link"><a tabindex="-1" href="https://www.w3.org/WAI/intro/wcag">WCAG Overview</a></span>
+              <span role="gridcell" class="list-link"><a tabindex="-1" href="https://www.w3.org/TR/html5/">HTML 5 Specification</a></span>
+              <span role="gridcell" class="list-link"><a tabindex="-1" href="https://www.w3.org/TR/2015/WD-SVG2-20150915/">SVG 2 Specification</a></span>
             </div>
           </div>
         </div>
@@ -134,7 +134,7 @@
       </p>
       <div aria-labelledby="ex3_label" role="region">
         <div id="ex3">
-          <div role="grid" aria-label="Search Results">
+          <div role="grid" aria-label="Search Results" aria-rowcount="19" aria-colcount="3" data-per-page="5">
             <div role="row">
               <span role="gridcell"><h3>
                   <a tabindex="-1" href="https://www.w3.org/WAI/intro/aria">WAI-ARIA Overview
