--- a/examples/grid/dataGrids.html
+++ b/examples/grid/dataGrids.html
@@ -392,7 +392,7 @@
                           Hide Type and Category
                         </button>
                         <table role="grid" aria-labelledby="grid3Label" aria-rowcount="16" aria-colcount="6" data-per-page="5">
-                            <tr>
+                            <tr data-fixed="true">
                                 <th>Date</th>
                                 <th>Type</th>
                                 <th>Description</th>
