--- a/aria-practices.html
+++ b/aria-practices.html
@@ -872,7 +872,8 @@
       <section class="notoc">
           <h4>Examples</h4>
           <ul>
-            <li><a href="examples/grid/dataGrids.html">Data Grids</a>: Three example implementations of the grid design pattern that include features relevant to tabular information, such as content editing, sort, and column hiding. </li>
+            <li><a href="examples/grid/dataGrids.html">Data Grids</a>: Three example implementations of grid that include features relevant to presenting tabular information, such as content editing, sort, and column hiding. </li>
+            <li><a href="examples/grid/layoutGrids.html">Layout Grids</a>: Three example implementations of grids that are used to lay out widgets, including a collection of navigation links, a message recipients list, and a set of search results. </li>
           </ul>
         </section>
     </section>
