--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1102,11 +1102,9 @@
 
       <section class="notoc">
         <h4>Example</h4>
-        <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
-
         <ul>
-          <li><a href="http://www.oaa-accessibility.org/examplep/menubar1/" target="_blank">Open Ajax Alliance Menu bar</a></li>
-          <li><a href="http://www.oaa-accessibility.org/examplep/menubar2/" target="_blank">Open Ajax Alliance Menu bar using CSS selectors</a></li>
+          <li><a href="examples/menubar/menubar-1/menubar-1.html">Navigation Menubar</a>: Demonstrates a menubar that provides site navigation.</li>
+          <li><a href="examples/menubar/menubar-2/menubar-2.html">Editor Menubar</a>: Demonstrates menu radios and menu checkboxes in submenus of a menubar that provides text formatting commands for a text field.</li>
         </ul>
       </section>
     </section>
