Include feedback issue links for menubar examples.
modified:   examples/menubar/menubar-1/menubar-1.html:
Provided link to issue 145 for review.

modified:   examples/menubar/menubar-2/menubar-2.html:
Provided link to issue 144 for feedback.

--- a/examples/menubar/menubar-2/menubar-2.html
+++ b/examples/menubar/menubar-2/menubar-2.html
@@ -24,6 +24,7 @@
     <main>
 
       <h1>ARIA Menubar Example: <code>menuitemradio</code> and <code>menuitemcheckbox</code></h1>
+      <p><strong>NOTE:</strong> Please provide feedback on this example in <a href="https://github.com/w3c/aria-practices/issues/144">issue 144</a>. </p>
 
       <ul>
         <li>List of pull down menu items that change the styling of the text.</li> 
