--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -21,6 +21,7 @@
   <body>
     <main>
       <h1>ARIA Menubar Example: Links</h1>
+      <p><strong>NOTE:</strong> Please provide feedback on this example in <a href="https://github.com/w3c/aria-practices/issues/145">issue 145</a>. </p>
 
       <ul>
         <li>List of pull down menu items that are links to other pages</li> 
