Fix deletion bugs

--- a/examples/tabs/tabs.html
+++ b/examples/tabs/tabs.html
@@ -9,14 +9,12 @@
     <link href="css/tabs.css" rel="stylesheet">
   </head>
   <body>
-    
+
     <main>
     <h1>ARIA tabs widget Example</h1>
     <p><strong>NOTE:</strong> Please provide feedback on this example in <a href="https://github.com/w3c/aria-practices/issues/114">issue 114</a>. </p>
-      <h2>Creating a tabs widget using <code>role=tab</code>, <code>role=tablist</code>, and <code>role=tablist</code>.</h2>
 
-      <p> <a href="../../aria-practices.html#tabpanel">Authoring Practice Design Patten for Tabs</a></p>
-      <p><strong>Note:</strong> When using HTML, use the <code>&lt;button&gt;</code> element for tabs. It is recommended that authors not re-purpose other elements to create buttons.</p>
+      <p> <a href="../../aria-practices.html#tabpanel">Authoring Practice Design Pattern for Tabs</a></p>
 
       <h2>Tabs Example</h2>
 
@@ -77,7 +75,7 @@
           </tr>
           <tr>
               <th><kbd>delete</kbd></th>
-              <td>If deletion is allowed, deletes the current tab element and its associated tab panel.</td>
+              <td>If deletion is allowed on the current tab, deletes the current tab element and its associated tab panel.</td>
           </tr>
         </tbody>
       </table>
