--- a/examples/accordion/accordion1.html
+++ b/examples/accordion/accordion1.html
@@ -12,7 +12,6 @@
 <script src="../js/examples.js" type="text/javascript"></script>
 
 <!--  js and css for this example. -->
-<link rel="stylesheet" type="text/css" href="css/global.css" />
 <link rel="stylesheet" type="text/css" href="css/customize.css" />
 <script type="text/javascript" src="js/helpers.js"></script>
 <script type="text/javascript" src="js/setup.js"></script>
@@ -42,13 +41,11 @@
                         <dd id="sect1" role="region" aria-labelledby="accordion1id" class="hidden">
                             <div>
                                 <!-- Variable content within section, may include any type of markup or interactive widgets. -->
-                                <fieldset class="contact">
-                                    <div class="formLeft">
-                                        <p>
+                                <fieldset class="contact flex">
+                                    <p>
                                             <label for="cufc1"><span class="cRed">*</span>Name:</label>
                                             <input type="text" value="" name="Name" id="cufc1"
-                                                class="required" aria-required="true"
-                                            >
+                                                class="required" aria-required="true">
                                         </p>
                                         <p>
                                             <label for="cufc2"><span class="cRed">*</span>Email:</label>
@@ -60,8 +57,6 @@
                                             <label for="cufc3">Phone:</label>
                                             <input type="text" value="" name="Phone" id="cufc3">
                                         </p>
-                                    </div>
-                                    <div class="formRight">
                                         <p>
                                             <label for="cufc4">Extension:</label>
                                             <input type="text" value="" name="Ext" id="cufc4">
@@ -76,18 +71,16 @@
                                                 id="cufc6"
                                             >
                                         </p>
-                                    </div>
                                 </fieldset>
                             </div>
                         </dd>
                         <dt role="heading" aria-level="2" class="clearfix">
                             <a role="button" aria-expanded="false" href="#" class="accAccordion"
-                                aria-controls="sect2" id="accordion2id"
-                            ><span class="icon"></span><span class="lbl">Billing Address</span></a>
+                                aria-controls="sect2" id="accordion2id"><span class="icon"></span><span class="lbl">Billing Address</span></a>
                         </dt>
                         <dd id="sect2" role="region" aria-labelledby="accordion2id" class="hidden">
                             <div>
-                                <fieldset class="billing">
+                                <fieldset class="billing flex">
                                     <p>
                                         <label for="b-add1">Address 1:</label>
                                         <input type="text" name="b-add1" id="b-add1" />
@@ -118,7 +111,7 @@
                         </dt>
                         <dd id="sect3" role="region" aria-labelledby="accordion3id" class="hidden">
                             <div>
-                                <fieldset class="shipping">
+                                <fieldset class="shipping flex">
                                     <p>
                                         <label for="m-add1">Address 1:</label>
                                         <input type="text" name="m-add1" id="m-add1" />
