--- a/examples/grid/LayoutGrids.html
+++ b/examples/grid/LayoutGrids.html
@@ -100,19 +100,29 @@
             This should be styled so it is presented like a e-mail "To" field and wrap to new lines as it grows; tokens on a line will not necessarily align with tokens on a previous or following line.
             I am assuming the remove icon buttons will be the typical X icon; I just put a letter X in the span as a placeholder.
            -->
-          <span id="send_to_label">Send To:</span>
-          <div role="grid" class="pill-list" aria-labelledby="send_to_label"  data-wrap-cols="true">
-            <div role="row" class="pill-item" data-id="1">
-              <span role="gridcell"><a id="r1" class="pill-name" tabindex="-1" href="#">Recipient Name 1</a></span>
-              <span role="gridcell"><span id="rb1" class="pill-remove" tabindex="-1" role="button" aria-label="Remove" aria-labelledby="rb1 r1"> X </span></span>
+          <div class="recipient-list">
+            <span id="send_to_label">Send To:</span>
+            <div role="grid" class="pill-list" aria-labelledby="send_to_label"  data-wrap-cols="true">
+              <div role="row" class="pill-item" data-id="1">
+                <span role="gridcell"><a id="r1" class="pill-name" tabindex="-1" href="#">Recipient Name 1</a></span>
+                <span role="gridcell"><span id="rb1" class="pill-remove" tabindex="-1" role="button" aria-label="Remove" aria-labelledby="rb1 r1"> X </span></span>
+              </div>
+              <div role="row" class="pill-item" data-id="2">
+                <span role="gridcell"><a id="r2" class="pill-name" tabindex="-1" href="#">Recipient Name 2</a></span>
+                <span role="gridcell"><span id="rb2" class="pill-remove" tabindex="-1" role="button" aria-label="Remove" aria-labelledby="rb2 r2"> X </span></span>
+              </div>
             </div>
-            <div role="row" class="pill-item" data-id="2">
-              <span role="gridcell"><a id="r2" class="pill-name" tabindex="-1" href="#">Recipient Name 2</a></span>
-              <span role="gridcell"><span id="rb2" class="pill-remove" tabindex="-1" role="button" aria-label="Remove" aria-labelledby="rb2 r2"> X </span></span>
+
+            <div id="recipient-form">
+              <input id="add-recipient-input" type="text" aria-label="Add Recipient" placeholder="New Recipient Name">
+              <button id="add-recipient-button">Add</button>
+              <div class="accessible_elem">
+                Last change to recipient list:
+                <span aria-live="polite" aria-relevant="text" id="form-action-text"></span>
+              </div>
             </div>
           </div>
-          <input id="add-recipient-input" type="text" aria-label="Add Recipient" placeholder="New Recipient Name">
-          <button id="add-recipient-button">Add</</button>
+
         </div>
       </div>
       <p>In this implementation:</p>
@@ -134,7 +144,7 @@
       </p>
       <div aria-labelledby="ex3_label" role="region">
         <div id="ex3">
-          <div role="grid" aria-label="Search Results" aria-rowcount="19" aria-colcount="3" data-per-page="5" data-wrap-cols="true">
+          <div role="grid" aria-label="Search Results" aria-rowcount="19" data-per-page="5" data-wrap-cols="true">
             <div role="row">
               <span role="gridcell"><h3>
                   <a tabindex="-1" href="https://www.w3.org/WAI/intro/aria">WAI-ARIA Overview
