--- a/examples/tabs/tabs.html
+++ b/examples/tabs/tabs.html
@@ -22,7 +22,7 @@
 
       <div id="example">
         <div class="tabs">
-          <div role="tablist" data-delay>
+          <div role="tablist">
             <button role="tab" aria-selected="true" aria-controls="nils-tab" id="nils">Nils Frahm</button>
             <button role="tab" aria-selected="false" aria-controls="helios-tab" id="helios" tabindex="-1">Helios</button>
             <button role="tab" aria-selected="false" aria-controls="complexcomplex" id="complex" tabindex="-1" data-deletable>Joke</button>
