--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1629,6 +1629,11 @@
 
     <section class="widget" id="TreeView">
       <h3>Tree View</h3>
+      <p class="note">
+        This section was significantly revised on November 8.
+        To review the list of changes and provide feedback,
+        see <a href="https://github.com/w3c/aria-practices/issues/131">issue 131</a>.
+      </p>
       <p>
         A tree view widget presents a hierarchical list.
         Any item in the hierarchy may have child items, and items that have children may be expanded or collapsed to show or hide the children.
