Added link to issue 131 from the beginning of the new section about selection follows focus.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2450,6 +2450,11 @@ A tree that provides navigation to a set of web pages and demonstrates how to ex
     
     <section id="kbd_selection_follows_focus">
       <h3>Deciding When to Make Selection Automatically Follow Focus</h3>
+      <p class="note">
+        This section was added on November 8.
+        To provide feedback,
+        see <a href="https://github.com/w3c/aria-practices/issues/131">issue 131</a>.
+      </p>
       <p>
         in composite widgets where only one element may be selected, such as a tablist or single-select listbox, moving the focus may also cause the focused element to become the selected element.
         This is called having selection follow focus.
