Add screen reader separators in single implementation example template
modified:   examples/coding-template/SingleImplementationExample-Template.html:
Added separator divs for the example and html source as described in
commit c885ebe150e81b57edbe018d405a4b92ee053810.

modified:   examples/coding-template/MultipleImplementationExample-Template.html:
Fixed error in label of separator for example 1.

--- a/examples/coding-template/MultipleImplementationExample-Template.html
+++ b/examples/coding-template/MultipleImplementationExample-Template.html
@@ -64,7 +64,7 @@
         This is the preferred implementation whenever feasible. (Delete this paragraph if there
         is not a preferred implementation.)
       </p>
-      <div role="separator" id="ex1_start_sep" aria-labelledby="ex1_sep ex1_label"
+      <div role="separator" id="ex1_start_sep" aria-labelledby="ex1_start_sep ex1_label"
         aria-label="Start of"
       ></div>
       <!-- 
