--- a/examples/listbox/listbox.html
+++ b/examples/listbox/listbox.html
@@ -2,39 +2,19 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<!-- 
-  An example that was implemented with this template can be found in: examples/checkbox/checkbox-2.html. 
-  This template is for examples where multiple implementations of the same design pattern are demonstrated.
-  This template includes space for 3 implementations; reduce or expand as needed.
-  Use this template when multiple implementations are needed to demonstrate subtle but important variations in the design pattern.
-  If you use this template file, rename it to reflect the name of the example, e.g., TriStateCheckboxes.html.
-  Similarly, rename the javascript and CSS stub files in the js and css subdirectories and update the head element of this file.
--->
-
-<!--  Give this example implementation a name and put it in the title element, e.g., "Checkbox" if implementing the checkbox pattern.
-  The name should be unique if the pattern will have multiple implementations, 
-  e.g., "Simple Two-State Checkbox" or "Three-State Checkbox".
-  -->
-<title>EXAMPLE_NAME | WAI-ARIA Authoring Practices 1.1</title>
+<title>Listbox Example | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link href="../css/core.css" rel="stylesheet">
 <link href="../css/table.css" rel="stylesheet">
 <script src="../js/examples.js" type="text/javascript"></script>
 
-<!--  js and css for this example.
-  When developing an example implementation of a design pattern,
-  these files will contain the CSS and JS for the example implementation.
-  Rename these files to match the name of the example, e.g., checkbox.js if implementing the checkbox design pattern.
--->
-<link href="css/example_name.css" rel="stylesheet">
-<script src="js/example_name.js" type="text/javascript"></script>
-
+<link href="css/listbox.css" rel="stylesheet">
+<script src="js/listbox.js" type="text/javascript"></script>
 </head>
 <body>
-  <main> <!--  Repeat the name of the example in this H1  -->
-  <h1>EXAMPLE_NAME</h1>
-
+  <main>
+  <h1>Listbox Example</h1>
   <p>
     <!-- Provide an overview of the example where the first sentence provides a link to the section of aria-practices.html that describes the pattern this example implements. 
             Include a simple, plain-language description of how the examples work and the differences among the implementations.
