Fix typo found by Ann in treeview description
For issue #131, modified:   aria-practices.html:
Tree view section, fixed typo in first paragraph, changed "An" to "an".
Per feedback from @annabbott.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1638,7 +1638,7 @@
         A tree view widget presents a hierarchical list.
         Any item in the hierarchy may have child items, and items that have children may be expanded or collapsed to show or hide the children.
         For example, in a file system navigator that uses a tree view to display folders and files,
-        An item representing a folder can be expanded to reveal the contents of the folder, which may be files, folders, or both.
+        an item representing a folder can be expanded to reveal the contents of the folder, which may be files, folders, or both.
       </p>
       <p>Terms for understanding tree views include:</p>
       <dl>
