Slight rewording in tabs example

--- a/examples/tabs/tabs.html
+++ b/examples/tabs/tabs.html
@@ -114,7 +114,7 @@
             </tr>
             <tr>
               <th><kbd>delete</kbd></th>
-              <td>If deletion is allowed on the current tab, deletes the current tab element and its associated tab panel.</td>
+              <td>If deletion on the selected tab is allowed this will that tab element and its associated tab panel.</td>
             </tr>
           </tbody>
         </table>
