--- a/aria-practices.html
+++ b/aria-practices.html
@@ -913,85 +913,110 @@
       <h3>Listbox</h3>
 
       <p>
-        A <a href="#listbox" class="role-reference">listbox</a> widget allows a user to select one or more items from a list of options.
+        A <a href="#listbox" class="role-reference">listbox</a> widget presents a list of options and allows a user to select one or more of them.
         A listbox that allows a single option to be chosen is a single-select listbox; one that allows multiple options to be selected is a multi-select listbox.
       </p>
       <p>
-        The contents of <code>option</code> elements in a <code>listbox</code> are reduced by browsers to static text strings that become the accessible names of the options.
-        So, <code>options</code> in a <code>listbox</code> should not contain interactive elements, such as links, buttons, or checkboxes.
-        To create a list of interactive elements, see the <a href="#grid">grid</a> pattern.
+        When screen readers present a listbox, they render the name, state, and position of each option in the list.
+        The name of an option is a string calculated by the browser, typically from the content of the option element.
+        As a flat string, the name does not contain any semantic information.
+        Thus, if an option contains a semantic element, such as a heading, screen reader users will not have access to the semantics.
+        In addition, the interaction model conveyed by the listbox role to assistive technologies does not support interacting with elements inside of an option.
+        Because of these traits of the listbox widget, it does not provide an accessible way to present a list of interactive elements, such as links, buttons, or checkboxes.
+        To present a list of interactive elements, see the <a href="#grid">grid</a> pattern.
       </p>
       <p>
-      Authors should avoid creating options with very long names.
-       Each option name is spoken by a screen reader as a single unit of speech when the user navigates the list.
-       When a large amount information is spoken as the result of a single key press, it can be difficult to understand.
-      If the speaking of an option is interrupted, the user will typically have to re-read the entire option.
-        And, if the user does not understand what is spoken, re-reading of a listbox option name by character, word, or phrase may be a difficult operation for some screen reader users because the screen reader is in an interactive mode, rather than a reading mode, when operating a widget like a listbox.
+        Avoiding very long option names facilitates understandability and perceivability for screen reader users. 
+        The entire name of an option is spoken as a single unit of speech when the option is read.
+        When too much information is spoken as the result of a single key press, it is difficult to understand.
+        Long names inhibit perception by increasing the impact of interrupted speech because users typically have to re-read the entire option.
+      And, if the user does not understand what is spoken, reading the name by character, word, or phrase may be a difficult operation for many screen reader users in the context of a listbox widget.
       </p>
       <p>
-        Authors should also avoid creating sets of options where each option name starts with the same word or phrase.
-        Otherwise, scrolling through the list to find a specific option becomes inordinately time consuming for a screen reader user who must listen to that word or phrase repeated before hearing what is unique about each option.
+        Sets of options where each option name starts with the same word or phrase can also significantly degrade usability for keyboard and screen reader users.
+        Scrolling through the list to find a specific option becomes inordinately time consuming for a screen reader user who must listen to that word or phrase repeated before hearing what is unique about each option.
         For example, if a listbox for choosing a city were to contain options where each city name were preceded by a country name, and if many cities were listed for each country, a screen reader user would have to listen to the country name before hearing each city name.
         In such a scenario, it would be better to have 2 list boxes, one for country and one for city.
       </p>
-
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
+        <p>For a vertically oriented listbox:</p>
         <ul>
           <li> When a single-select listbox receives focus:
             <ul>
-              <li>If none of the options are selected before the listbox receives focus, the first option receives focus. The author may choose to have the first option automatically selected. </li>
+              <li>If none of the options are selected before the listbox receives focus, the first option receives focus. Optionally, the first option may be automatically selected.</li>
               <li>If an option is selected before the listbox receives focus, focus is set on the selected option. </li>
             </ul>
           </li>
           <li>When a multi-select listbox receives focus:
             <ul>
-              <li>If none of the options are selected before the listbox receives focus, focus is set on the first option. The option should not be selected when it receives focus.</li>
+              <li>If none of the options are selected before the listbox receives focus, focus is set on the first option and there is no automatic change in the selection state.</li>
               <li>If one or more options are selected before the listbox receives focus, focus is set on the first option in the list that is selected.</li>
             </ul>
           </li>
-          <li><kbd>Up Arrow</kbd> and <kbd>Down Arrow</kbd>: Move focus to the previous and next option, respectively. If it is a single-select listbox, the selection state moves with the focus.</li>
-           <li><kbd>Home</kbd> and <kbd>End</kbd> (Optional): Move focus to first and last option, respectively. If it is a single-select listbox, the selection state moves with the focus. Strongly recommended for lists with more than five options.</li>
-          <li>Type-ahead is strongly recommended for all lists, but  essential for long lists (typically more than five options):
+          <li><kbd>Down Arrow</kbd>: Moves focus to the next option. Optionally, in a single-select listbox, selection may also move with focus.</li>
+          <li><kbd>Up Arrow</kbd>: Moves focus to the previous option. Optionally, in a single-select listbox, selection may also move with focus.</li>
+           <li><kbd>Home</kbd> (Optional): Moves focus to first option. Optionally, in a single-select listbox, selection may also move with focus. Supporting this key is strongly recommended for lists with more than five options.</li>
+           <li><kbd>End</kbd> (Optional): Moves focus to last option. Optionally, in a single-select listbox, selection may also move with focus. Supporting this key is strongly recommended for lists with more than five options.</li>
+          <li>Type-ahead is recommended for all listboxes, especially those with more than seven options:
             <ul>
               <li>Type a character: focus moves to the next item with a name that starts with the typed character.</li>
               <li>Type multiple characters in rapid succession: focus moves to the next item with a name that starts with the string of characters typed.</li>
             </ul>
           </li>
           <li><strong>Multiple Selection</strong>:
-          Authors may implement either of two interaction models to support multiple selection: a recommended model that does not require the user to hold a modifier key, such as <kbd>Shift</kbd> or <kbd>Control</kbd>, while navigating the list
-          or an alternative model that does require modifier keys to be held while navigating in order to avoid losing selection states.
+            Authors may implement either of two interaction models to support multiple selection: 
+            a recommended model that does not require the user to hold a modifier key, such as <kbd>Shift</kbd> or <kbd>Control</kbd>, while navigating the list
+            or an alternative model that does require modifier keys to be held while navigating in order to avoid losing selection states.
             <ul>
               <li>Recommended selection model -- holding modifier keys is not necessary:
                 <ul>
                   <li><kbd>Space</kbd>: changes the selection state of the focused option .</li>
-                  <li><kbd>Shift + Up Arrow</kbd> and <kbd>Shift + Down Arrow</kbd> (optional): move focus to and select the previous and next option, respectively.</li>
-                  <li><kbd>Shift + Space</kbd> (Optional): selects contiguous items from the last   selected item to the current item. </li>
-                  <li><kbd>Control + Shift + Home</kbd> (Optional): selects the option with focus and all options up to the beginning of the list.</li>
-                  <li><kbd>Control + Shift + End</kbd> (Optional): selects the option with focus and all options down to the end of the list.</li>
-                  <li><kbd>Control + A</kbd> (Optional): selects all options in the list.</li>
+                  <li><kbd>Shift + Down Arrow</kbd> (Optional): Moves focus to and selects the next option.</li>
+                  <li><kbd>Shift + Up Arrow</kbd> (Optional): Moves focus to and selects the previous option.</li>
+                  <li><kbd>Shift + Space</kbd> (Optional): Selects contiguous items from the most recently selected item to the focused item.</li>
+                  <li><kbd>Control + Shift + Home</kbd> (Optional): Selects the focused option and all options up to the first option.</li>
+                  <li><kbd>Control + Shift + End</kbd> (Optional): Selects the focused option and all options down to the last option.</li>
+                  <li><kbd>Control + A</kbd> (Optional): Selects all options in the list. Optionally, if all options are selected, it may also unselect all options.</li>
                 </ul>
               </li>
-              <li>Alternative selection model -- modifier keys must be held down to maintain selected states when navigating):
-                <ul>
-                  <li><kbd>Shift + Up Arrow</kbd> and <kbd>Shift + Down Arrow</kbd>: move focus to and select the previous and next option, respectively.</li>
-                  <li><kbd>Control + Up Arrow</kbd> and <kbd>Control + Down Arrow</kbd>: Without changing the selection state, move focus to the previous and next option, respectively. </li>
+              <li>Alternative selection model -- moving focus without holding a <kbd>Shift</kbd> or <kbd>Control</kbd> modifier unselects all selected nodes except the focused node: 
+              <ul>
+                  <li><kbd>Shift + Down Arrow</kbd>: Moves focus to and toggles the selection state of the next option.</li>
+                  <li><kbd>Shift + Up Arrow</kbd>: Moves focus to and toggles the selection state of the previous option.</li>
+                  <li><kbd>Control + Down Arrow</kbd>: Moves focus to the next option without changing its selection state.</li>
+                  <li><kbd>Control + Up Arrow</kbd>: Moves focus to the previous option without changing its selection state.</li>
                   <li><kbd>Control + Space</kbd> Changes the selection state of the focused option. </li>
-                  <li><kbd>Up Arrow</kbd> and <kbd>Down Arrow</kbd>: Remove all selected states and move focus to the previous and next option, respectively. </li>
-                  <li><kbd>Home</kbd> and <kbd>End</kbd> (Optional): Remove all selected states and move focus to the first and last option, respectively. </li>
-                  <li><kbd>Shift + Space</kbd> (Optional): selects contiguous items from the last   selected item to the current item. </li>
-                  <li><kbd>Control + Shift + Home</kbd> (Optional): selects the option with focus and all options up to the beginning of the list.</li>
-                  <li><kbd>Control + Shift + End</kbd> (Optional): selects the option with focus and all options down to the end of the list.</li>
-                  <li><kbd>Control + A</kbd> (Optional): selects all options in the list.</li>
+                  <li><kbd>Shift + Space</kbd> (Optional): Selects contiguous items from the most recently selected item to the focused item.</li>
+                  <li><kbd>Control + Shift + Home</kbd> (Optional): Selects the focused option and all options up to the first option.</li>
+                  <li><kbd>Control + Shift + End</kbd> (Optional): Selects the focused option and all options down to the last option.</li>
+                  <li><kbd>Control + A</kbd> (Optional): Selects all options in the list. Optionally, if all options are selected, it may also unselect all options.</li>
                 </ul>
               </li>
             </ul>
           </li>
         </ul>
         <ol class="note">
-        <li>If the ability to select or deselect all options may be commonly needed, it is recommended that the author add separate controls to perform these actions. </li>
-        <li>Focus (the active element) is different from the selected state. See <a href="#focus_vs_selection">to be written</a>. </li>
-        <li>The listbox role supports the <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a> property, which provides an alternative to moving DOM focus among options when scrolling. For details, see <a href="#using_activedescendant">to be written</a>. </li>
+          <li>DOM focus (the active element) is functionally distinct from the selected state. For more details, see <a href="#kbd_focus_vs_selection">this description of differences between focus and selection.</a></li>
+          <li>
+            The <code>listbox</code> role supports the <a class="property-reference" href="#aria-activedescendant">aria-activedescendant</a> property, 
+            which provides an alternative to moving DOM focus among <code>treeitem</code> elements when implementing keyboard navigation. 
+            For details, see <a href="#kbd_focus_activedescendant">Managing Focus in Composites Using aria-activedescendant</a>.
+          </li>
+          <li>
+            In a single-select listbox, moving focus may optionally unselect the previously selected option and select the newly focused option.
+            This model of selection is known as &quot;selection follows focus&quot;.
+            Having selection follow focus can be very helpful in some circumstances and can severely degrade accessibility in others.
+For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding When to Make Selection Automatically Follow Focus</a>.
+          </li>
+          <li>If selecting or unselecting all options is an important function, implementing separate controls for these actions, such as buttons for &quot;Select All&quot; and &quot;Unselect All&quot;, significantly improves accessibility.</li>
+        <li>
+            If the options in a listbox are arranged horizontally:
+            <ol>
+              <li><kbd>Down Arrow</kbd> performs as <kbd>Right Arrow</kbd> is described above, and vice versa.</li>
+              <li><kbd>Up Arrow</kbd> performs as <kbd>Left Arrow</kbd> is described above, and vice versa.</li>
+            </ol>
+          </li>
         </ol>
       </section>
 
@@ -1001,21 +1026,25 @@
           <li>An element that contains or owns all the listbox options has role <a href="#listbox" class="role-reference">listbox</a>.</li>
           <li>Each option in the listbox has role <a href="#option" class="role-reference">option</a> and is a DOM  descendant of the element with role <code>listbox</code> or is referenced by an <a href="#aria-owns" class="property-reference">aria-owns</a> property on the listbox element.</li>
           <li>If the listbox is not part of another widget, then it has a visible label referenced by <a href="#aria-labelledby" class="property-reference">aria-labelledby</a> on the element with role <code>listbox</code>.</li>
-          <li>The selected option has <a href="#aria-selected" class="property-reference">aria-selected</a> set to <code>true</code>. </li>
+          <li>In a single-select listbox, the selected option has <a href="#aria-selected" class="property-reference">aria-selected</a> set to <code>true</code>. </li>
           <li>if the listbox supports multiple selection:
-          <ul>
-          <li> The element with role <code>listbox</code> has <a href="#aria-multiselectable" class="property-reference">aria-multiselectable</a> set to <code>true</code>. </li>
-          <li>All selected options have <a href="#aria-selected" class="state-reference">aria-selected</a> set to <code>true</code>. </li>
-          <li>All options that are not selected have <a href="#aria-selected" class="state-reference">aria-selected</a> set to <code>false</code>. </li>
-          </ul>
+            <ul>
+              <li> The element with role <code>listbox</code> has <a href="#aria-multiselectable" class="property-reference">aria-multiselectable</a> set to <code>true</code>. </li>
+              <li>All selected options have <a href="#aria-selected" class="state-reference">aria-selected</a> set to <code>true</code>. </li>
+              <li>All options that are not selected have <a href="#aria-selected" class="state-reference">aria-selected</a> set to <code>false</code>. </li>
+            </ul>
+          </li>
           <li>If the complete set of available options is not present in the DOM due to dynamic loading as the user scrolls, their <a href="#aria-setsize" class="property-reference">aria-setsize</a> and <a href="#aria-posinset" class="property-reference">aria-posinset</a> attributes are set appropriately. </li>
+          <li>
+            If options are arranged horizontally, the element with role <code>listbox</code> has <a href="#aria-orientation" class="property-reference">aria-orientation</a> set to <code>horizontal</code>.
+            The default value of <code>aria-orientation</code> for <code>listbox</code> is <code>vertical</code>.
           </li>
         </ul>
       </section>
 
       <section class="notoc">
         <h4>Example</h4>
-        <p class="ednote">Add link to example</p>
+        <p><a href="examples/listbox/listbox.html">Listbox Examples:</a> Two examples of the listbox pattern demonstrating differences between single-select and multi-select implementation as well as the use of action buttons with key shortcuts for arranging items in a list.</p>
       </section>
     </section>
 
