Simplify roles, states, and properties section of multiple example template
In examples/coding-template/MultipleImplementationExample-Template.html,
Changed roles, states, and properties section:
1. Changed title to "Role, Property, State, and Tabindex  Attributes":
  Tabindex should be included but it is not an ARIA attrib, so removed "ARIA" from heading and added tabindex.
2.Consolidated all attributes into a single column; no need for one column for roles and and another for states/props.

This is the format used in examples/listbox/listbox.html, and it is much easier to complete and easier to read.

--- a/examples/coding-template/MultipleImplementationExample-Template.html
+++ b/examples/coding-template/MultipleImplementationExample-Template.html
@@ -227,49 +227,37 @@
   </section>
 
   <section>
-    <h2 id="rps_label">ARIA Roles, Properties, and States</h2>
-    <!--  Update this table to describe the roles, properties, and states implemented in this example.  
-            If the content will vary significantly for the above implementations, make this a level 4 section inside each of the above level 3 implementation sections.
-        -->
+    <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
+    <!--
+      Update this table to describe how roles, properties, states, and tabindex are used in this example.  
+      If the content will vary significantly for the above implementations, make this a level 4 section inside each of the above level 3 implementation sections.
+    -->
     <table aria-labelledby="rps_label">
       <thead>
         <tr>
-          <th>Role</th>
-          <th>Property/State</th>
-          <th>Element</th>
+          <th>Attribute</th>
+          <th>Applied to Element</th>
           <th>Usage</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>
-            <em>role</em>
-          </td>
-          <td></td>
-          <td>
-            element <em>X</em>
-          </td>
-          <td>
-            <ul>
-              <li>
-                Identify element with the <em>role</em> behavior
-              </li>
-            </ul>
-          </td>
+          <th><code>role=&quot;ROLE_NAME&quot;</code></th>
+          <td><code>HTML_ELEMENT</code></td>
+          <td>Brief explanation of usage, purpose, benefit, and/or guidance that is relevant to this specific implementation.</td>
         </tr>
         <tr>
-          <td></td>
-          <td>
-            <em>aria-xxxxx</em>
-          </td>
-          <td>
-            <em>X[role="yyy"]</em> element
-          </td>
-          <td>
-            <ul>
-              <li>Purpose of aria properties or aria states within example</li>
-            </ul>
-          </td>
+          <th>
+            <!--  Specify states and properties used like this; replace with the attributes that are relevant. -->
+            <code>aria-labelledby=&quot;ID_REF&quot;</code>
+          </th>
+          <td><code>HTML_ELEMENT</code></td>
+          <td>Brief explanation of usage, purpose, benefit, and/or guidance that is relevant to this specific implementation.</td>
+        </tr>
+        <tr>
+          <th>And so on ... covering all relevant attributes</th>
+          <td>...</td>
+          <td>...</td>
         </tr>
       </tbody>
     </table>
