--- a/examples/coding-template/SingleImplementationExample-Template.html
+++ b/examples/coding-template/SingleImplementationExample-Template.html
@@ -170,7 +170,7 @@
   <section>
     <h2 id="sc1_label">HTML Source Code</h2>
     <div role="separator" id="sc1_start_sep" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of HTML for "></div>
-    <div id="sc1" aria-labelledby="sc1_label" role="region"></div>
+    <div id="sc1"></div>
     <div role="separator" id="sc1_end_sep" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of HTML for "></div>
     <!--
       The following script will show the reader the HTML source for the example that is in the div with ID 'ex1'.
