--- a/examples/coding-template/MultipleImplementationExample-Template.html
+++ b/examples/coding-template/MultipleImplementationExample-Template.html
@@ -64,9 +64,7 @@
         This is the preferred implementation whenever feasible. (Delete this paragraph if there
         is not a preferred implementation.)
       </p>
-      <div role="separator" id="ex1_start_sep" aria-labelledby="ex1_start_sep ex1_label"
-        aria-label="Start of"
-      ></div>
+      <div role="separator" id="ex1_start_sep" aria-labelledby="ex1_start_sep ex1_label" aria-label="Start of"></div>
       <!-- 
         Note the ID of the following div that contains the example HTML is used as a parameter for the sourceCode.add() function.  
         The sourceCode functions in the examples/js/examples.js render the HTML source to show it to the reader of the example page.
@@ -88,10 +86,8 @@
           <!--  Target of previous link will need to be updated when we move the guidelines into the wiki from Ian's repo.  -->
         </ul>
       </div>
-      <div role="separator" id="ex1_end_sep" aria-labelledby="ex1_end_sep ex1_label"
-        aria-label="End of"
-      ></div>
-      <p>In this implementation:</p>
+      <div role="separator" id="ex1_end_sep" aria-labelledby="ex1_end_sep ex1_label" aria-label="End of"></div>
+      <h4>Notes</h4>
       <ul>
         <li>First of a short list of distinguishing characteristics of this implementation.</li>
         <li>Second of a short list of distinguishing characteristics of this implementation.</li>
@@ -102,9 +98,7 @@
 
     <section>
       <h3 id="ex2_label">Example 2: title of this variation of the implementation</h3>
-      <div role="separator" id="ex2_start_sep" aria-labelledby="ex2_start_sep ex2_label"
-        aria-label="Start of"
-      ></div>
+      <div role="separator" id="ex2_start_sep" aria-labelledby="ex2_start_sep ex2_label" aria-label="Start of"></div>
       <!-- 
         Note the ID of the following div that contains the example HTML is used as a parameter for the sourceCode.add() function.  
         The sourceCode functions in the examples/js/examples.js render the HTML source to show it to the reader of the example page.
@@ -125,10 +119,8 @@
           <!--  Target of previous link will need to be updated when we move the guidelines into the wiki from Ian's repo.  -->
         </ul>
       </div>
-      <div role="separator" id="ex2_end_sep" aria-labelledby="ex2_end_sep ex2_label"
-        aria-label="End of"
-      ></div>
-      <p>In this implementation:</p>
+      <div role="separator" id="ex2_end_sep" aria-labelledby="ex2_end_sep ex2_label" aria-label="End of"></div>
+      <h4>Notes</h4>
       <ul>
         <li>First of a short list of distinguishing characteristics of this implementation.</li>
         <li>Second of a short list of distinguishing characteristics of this implementation.</li>
@@ -139,9 +131,7 @@
 
     <section>
       <h3 id="ex3_label">Example 3: title of this variation of the implementation</h3>
-      <div role="separator" id="ex3_start_sep" aria-labelledby="ex3_start_sep ex3_label"
-        aria-label="Start of"
-      ></div>
+      <div role="separator" id="ex3_start_sep" aria-labelledby="ex3_start_sep ex3_label" aria-label="Start of"></div>
       <!-- 
         Note the ID of the following div that contains the example HTML is used as a parameter for the sourceCode.add() function.  
         The sourceCode functions in the examples/js/examples.js render the HTML source to show it to the reader of the example page.
@@ -162,10 +152,8 @@
           <!--  Target of previous link will need to be updated when we move the guidelines into the wiki from Ian's repo.  -->
         </ul>
       </div>
-      <div role="separator" id="ex3_end_sep" aria-labelledby="ex3_end_sep ex3_label"
-        aria-label="End of"
-      ></div>
-      <p>In this implementation:</p>
+      <div role="separator" id="ex3_end_sep" aria-labelledby="ex3_end_sep ex3_label" aria-label="End of"></div>
+      <h4>Notes</h4>
       <ul>
         <li>First of a short list of distinguishing characteristics of this implementation.</li>
         <li>Second of a short list of distinguishing characteristics of this implementation.</li>
@@ -176,19 +164,20 @@
   </section>
 
   <section>
-    <h2>Accessibility Features</h2>
-    <p class="annotate">Please replace this content with a list of accessibility features
-      demonstrated in this implementation, such as the following. If the content will vary
-      significantly for the above implementations, make this a level 4 section inside each of the
-      above level 3 implementation sections.</p>
-    <ul>
-      <li>ARIA roles</li>
-      <li>property and state information</li>
-      <li>Event handlers</li>
-      <li>
-        <code>tabindex</code> values
-      </li>
-    </ul>
+    <h2>Other Accessibility Features</h2>
+    <p class="annotate">
+      Optional section; delete if not needed.
+      Use this section to list other accessibility features
+      demonstrated in these examples.
+      These could be features that are included to make the example more relevant to application in the real world but are not specifically part of the design pattern.
+      For an example use of this section, see the 
+      <a href="../listbox/listbox.html">listbox pattern example page.</a>
+    </p>
+    <ol>
+      <li>Feature 1</li>
+      <li>Feature 2</li>
+      <li>Etc.</li>
+    </ol>
   </section>
 
   <section>
