Simplify keyboard section of example coding templates
Modified files:
examples/coding-template/MultipleImplementationExample-Template.html
examples/coding-template/SingleImplementationExample-Template.html

Replaced the table with a list in the keyboard section.
Changed the comment to say that it is recommended to copy the list of keys from the design pattern in aria-practices.html
and then edit the list to describe only what is relevant to the example.

--- a/examples/coding-template/MultipleImplementationExample-Template.html
+++ b/examples/coding-template/MultipleImplementationExample-Template.html
@@ -182,37 +182,15 @@
 
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
-    <!--  Update the content of this table to describe which keys are implemented in this example. 
-            If the content will vary significantly for the above implementations, make this a level 4 section inside each of the above level 3 implementation sections.
-            -->
-    <table aria-labelledby="kbd_label">
-      <thead>
-        <tr>
-          <th>Key</th>
-          <th>Function</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <em>key 1</em>
-          </td>
-          <td>Key 1 action</td>
-        </tr>
-        <tr>
-          <td>
-            <em>key 2</em>
-          </td>
-          <td>Key 2 action</td>
-        </tr>
-        <tr>
-          <td>
-            <em>key 3</em>
-          </td>
-          <td>Key 3 action</td>
-        </tr>
-      </tbody>
-    </table>
+    <!-- 
+      List the keys supported in this example.
+      Recommendation: Copy the list from the keyboard section of the design pattern in aria-practices.html 
+      and then reduce/simplify it to describe only what this example supports and how it behaves.
+     -->
+    <ul>
+      <li><kbd>KEY_NAME</kbd>: function</li>
+      <li><kbd>KEY_NAME</kbd>: function</li>
+    </ul>
   </section>
 
   <section>
