--- a/examples/coding-template/SingleImplementationExample-Template.html
+++ b/examples/coding-template/SingleImplementationExample-Template.html
@@ -84,35 +84,15 @@
 
   <section>
     <h2 id="kbd_label">Keyboard Support</h2>
-    <!--  Update the content of this table to describe which keys are implemented in this example. -->
-    <table aria-labelledby="kbd_label">
-      <thead>
-        <tr>
-          <th>Key</th>
-          <th>Function</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <em>key 1
-          </td>
-          <td>Key 1 action</td>
-        </tr>
-        <tr>
-          <td>
-            <em>key 2
-          </td>
-          <td>Key 2 action</td>
-        </tr>
-        <tr>
-          <td>
-            <em>key 3
-          </td>
-          <td>Key 3 action</td>
-        </tr>
-      </tbody>
-    </table>
+    <!-- 
+      List the keys supported in this example.
+      Recommendation: Copy the list from the keyboard section of the design pattern in aria-practices.html 
+      and then reduce/simplify it to describe only what this example supports and how it behaves.
+     -->
+    <ul>
+      <li><kbd>KEY_NAME</kbd>: function</li>
+      <li><kbd>KEY_NAME</kbd>: function</li>
+    </ul>
   </section>
 
   <section>
