Use ordered list for accessibility features in single example template
In examples/coding-template/SingleImplementationExample-Template.html,
there is a section with a list of accessibility features.
Changed the list from unordered to ordered.
This makes it easier for people to refer to a specific feature since the items in the list  will not often be labeled
unlike the lists of keys where every list item starts with the key name.

--- a/examples/coding-template/SingleImplementationExample-Template.html
+++ b/examples/coding-template/SingleImplementationExample-Template.html
@@ -72,14 +72,12 @@
     <h2>Accessibility Features</h2>
     <p class="annotate">Please replace this content with a list of accessibility features
       demonstrated in this implementation, such as:</p>
-    <ul>
+    <ol>
       <li>ARIA roles</li>
       <li>property and state information</li>
       <li>Event handlers</li>
-      <li>
-        <code>tabindex</code> values
-      </li>
-    </ul>
+      <li><code>tabindex</code> values</li>
+    </ol>
   </section>
 
   <section>
